<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.healthmarketscience</groupId>
    <artifactId>openhms-parent</artifactId>
    <version>2.0.11-SNAPSHOT</version>
  </parent>
  <groupId>com.healthmarketscience.jackcess</groupId>
  <artifactId>jackcess-encrypt</artifactId>
  <name>Jackcess Encrypt</name>
  <description>An add-on to the Jackcess library for handling encryption in MS Access files.</description>
  <version>5.0.0-SNAPSHOT</version>
  <url>http://jackcessencrypt.sf.net</url>
  <inceptionYear>2010</inceptionYear>
  <developers>
    <developer>
      <name>James Ahlborn</name>
      <id>jahlborn</id>
      <email>jahlborn@users.sf.net</email>
      <roles>
        <role>Owner</role>
      </roles>
      <timezone>-5</timezone>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Vladimir Berezniker</name>
      <email>vmpn@vmpn.net</email>
      <url>http://www.linkedin.com/in/vladimirberezniker</url>
      <roles>
        <role>Deciphered various encryption algorithms</role>
      </roles>
      <timezone>-5</timezone>
    </contributor>
  </contributors>
  <issueManagement>
    <system>SourceForge2</system>
    <url>https://sourceforge.net/p/jackcessencrypt/bugs/</url>
  </issueManagement>
  <scm>
    <connection>scm:svn:svn://svn.code.sf.net/p/jackcessencrypt/code/trunk</connection>
    <!-- read/write svn connection -->
    <developerConnection>scm:svn:svn+ssh://svn.code.sf.net/p/jackcessencrypt/code/trunk</developerConnection>
    <url>http://svn.code.sf.net/p/jackcessencrypt/code/trunk</url>
  </scm>
  <build>
    <resources>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <filtering>false</filtering>
        <includes>
          <include>**/*.class</include>
        </includes>
      </resource>
    </resources>
    <defaultGoal>install</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <forkMode>once</forkMode>
            <systemProperties>
              <property>
                <name>com.healthmarketscience.jackcess.testFormats</name>
                <value>${jackcess.testFormats}</value>
              </property>
            </systemProperties>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>11</source>
            <target>11</target>
            <compilerArgument>-Xlint:all,-cast</compilerArgument>
            <showWarnings>true</showWarnings>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Automatic-Module-Name>com.healthmarketscience.jackcess.crypt</Automatic-Module-Name>
            <Export-Package>com.healthmarketscience.jackcess,com.healthmarketscience.jackcess.crypt</Export-Package>
            <Fragment-Host>com.healthmarketscience.jackcess</Fragment-Host>
          </instructions>
        </configuration>
        <executions>
          <execution>
            <id>bundle-manifest</id>
            <phase>process-classes</phase>
            <goals>
              <goal>manifest</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changes-plugin</artifactId>
        <configuration>
          <smtpHost>localhost</smtpHost>
          <toAddresses>
            <toAddress>jackcess-users@lists.sourceforge.net</toAddress>
          </toAddresses>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.code.maven-replacer-plugin</groupId>
        <artifactId>replacer</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <minmemory>128m</minmemory>
          <maxmemory>512</maxmemory>
          <!-- generated javadocs fail "syntax,html" checks -->
          <doclint>all,-accessibility,-missing,-syntax,-html</doclint>
          <links>
            <list>https://docs.oracle.com/javase/11/docs/api</list>
            <list>https://download.oracle.com/javaee/5/api</list>
            <list>https://jackcess.sourceforge.io/apidocs/</list>
            <list>https://www.bouncycastle.org/docs/docs1.8on/</list>
          </links>
          <source>11</source>
          <show>public</show>
          <stylesheetfile>${basedir}/src/site/javadoc/stylesheet.css</stylesheetfile>
          <quiet>true</quiet>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>com.healthmarketscience.jackcess</groupId>
      <artifactId>jackcess</artifactId>
      <version>5.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>1.78</version>
    </dependency>
    <dependency>
      <groupId>com.healthmarketscience.jackcess</groupId>
      <artifactId>jackcess</artifactId>
      <version>5.0.0-SNAPSHOT</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.14.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.14.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <configuration>
          <rulesets>
            <ruleset>${basedir}/src/site/pmd/custom-ruleset.xml</ruleset>
          </rulesets>
          <excludes>
            <exclude>**/com/healthmarketscience/jackcess/crypt/model/**</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-changes-plugin</artifactId>
        <configuration>
          <issueLinkTemplatePerSystem>
            <SourceForge2Features>https://sourceforge.net/p/jackcessencrypt/feature-requests/%ISSUE%</SourceForge2Features>
          </issueLinkTemplatePerSystem>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <minmemory>128m</minmemory>
          <maxmemory>512</maxmemory>
          <!-- generated javadocs fail "syntax,html" checks -->
          <doclint>all,-accessibility,-missing,-syntax,-html</doclint>
          <links>
            <list>https://docs.oracle.com/javase/11/docs/api</list>
            <list>https://download.oracle.com/javaee/5/api</list>
            <list>https://jackcess.sourceforge.io/apidocs/</list>
            <list>https://www.bouncycastle.org/docs/docs1.8on/</list>
          </links>
          <source>11</source>
          <show>public</show>
          <stylesheetfile>${basedir}/src/site/javadoc/stylesheet.css</stylesheetfile>
          <quiet>true</quiet>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <configuration>
          <excludeFilterFile>${basedir}/src/site/findbugs/exclude.xml</excludeFilterFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>com/healthmarketscience/jackcess/crypt/model/**/*.class</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  <distributionManagement>
    <site>
      <id>jackcessencrypt-build-site</id>
      <url>scp://shell.sourceforge.net/home/project-web/jackcessencrypt/htdocs</url>
    </site>
  </distributionManagement>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <jackcess.bigIndex>true</jackcess.bigIndex>
    <jackcess.testFormats>V1997,V2000,V2003,V2007</jackcess.testFormats>
  </properties>
</project>
